--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,7 +45,7 @@ hyper-util = "0.1.6"
 hyper_old = { package = "hyper", version = "0.14", default-features = false }
 linked_hash_set = "0.1"
 openssl-macros = "0.1.1"
-tower = { version = "0.4", default-features = false, features = ["util"] }
+tower = "0.4"
 tower-layer = "0.3"
 tower-service = "0.3"
 autocfg = "1.3.0"
