--- a/boring/Cargo.toml
+++ b/boring/Cargo.toml
@@ -19,13 +19,22 @@ rustdoc-args = ["--cfg", "docsrs"]
 [features]
 # Controlling the build
 
-# Use a FIPS-validated version of BoringSSL. Note that depending on how old the
-# version you're using, is, you may also need `fips-compat`.
-fips = ["boring-sys/fips"]
+# Use a FIPS-validated version of BoringSSL. This feature sets "fips-compat".
+fips = ["fips-compat", "boring-sys/fips"]
 
-# Build with compatibility for older versions of boringSSL, primarily
-# fips-20220613. This feature doesn't enable `fips` itself, which is useful if,
-# e.g., you use `fips-link-precompiled`.
+# Use a FIPS build of BoringSSL, but don't set "fips-compat".
+#
+# As of boringSSL commit a430310d6563c0734ddafca7731570dfb683dc19, we no longer
+# need to make exceptions for the types of BufLen, ProtosLen, and ValueLen,
+# which means the "fips-compat" feature is no longer needed.
+#
+# TODO(cjpatton) Delete this feature and modify "fips" so that it doesn't imply
+# "fips-compat".
+fips-no-compat = ["boring-sys/fips"]
+
+# Build with compatibility for the BoringSSL FIPS version, without enabling the
+# `fips` feature itself (useful e.g. if `fips-link-precompiled` is used with an
+# older BoringSSL version).
 fips-compat = []
 
 # Link with precompiled FIPS-validated `bcm.o` module.
