--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,13 @@
 [workspace]
-members = [
-    "boring",
-    "boring-sys",
-    "tokio-boring",
-    "hyper-boring"
-]
+members = ["boring", "boring-sys", "tokio-boring"]
 resolver = "2"
 
 [workspace.package]
-version = "4.15.0"
-repository = "https://github.com/cloudflare/boring"
+version = "0.2.0-alpha.1"
+repository = "https://github.com/plabayo/rama-boring"
+# we should stick on edition 2021 until ecosystem is ready,
+# and perhaps let cloudflare do it if ever,
+# for now let's stick to 2021 with MSRV 1.82
 edition = "2021"
 
 [workspace.metadata.release]
@@ -19,11 +17,13 @@ tag-prefix = ""
 publish = false
 
 [workspace.dependencies]
-boring-sys = { version = "4.15.0", path = "./boring-sys" }
-boring = { version = "4.15.0", path = "./boring" }
-tokio-boring = { version = "4.15.0", path = "./tokio-boring" }
+rama-boring-sys = { version = "0.2.0-alpha.1", path = "./boring-sys" }
+rama-boring = { version = "0.2.0-alpha.1", path = "./boring" }
+rama-boring-tokio = { version = "0.2.0-alpha.1", path = "./tokio-boring" }
 
-bindgen = { version = "0.70.1", default-features = false, features = ["runtime"] }
+bindgen = { version = "0.71.1", default-features = false, features = [
+    "runtime",
+] }
 bytes = "1"
 cmake = "0.1.18"
 fs_extra = "1.3.0"
@@ -37,16 +37,7 @@ futures = "0.3"
 tokio = "1"
 anyhow = "1"
 antidote = "1.0.0"
-http = "1"
-http-body-util = "0.1.2"
-http_old = { package = "http", version = "0.2" }
-hyper = "1"
-hyper-util = "0.1.6"
-hyper_old = { package = "hyper", version = "0.14", default-features = false }
 linked_hash_set = "0.1"
 openssl-macros = "0.1.1"
-tower = "0.4"
-tower-layer = "0.3"
-tower-service = "0.3"
 autocfg = "1.3.0"
-brotli = "6.0"
+brotli = "7.0"
