--- a/tokio-boring/Cargo.toml
+++ b/tokio-boring/Cargo.toml
@@ -1,14 +1,18 @@
 [package]
-name = "tokio-boring"
+name = "rama-boring-tokio"
 version = { workspace = true }
-authors = ["Alex Crichton <alex@alexcrichton.com>", "Ivan Nikulin <ifaaan@gmail.com>"]
+authors = [
+    "Alex Crichton <alex@alexcrichton.com>",
+    "Ivan Nikulin <ifaaan@gmail.com>",
+    "Glen De Cauwsemaecker <glen@plabayo.tech>",
+]
 license = "MIT OR Apache-2.0"
 edition = { workspace = true }
 repository = { workspace = true }
-homepage = "https://github.com/cloudflare/boring"
-documentation = "https://docs.rs/tokio-boring"
+homepage = "https://github.com/plabayo/rama-boring"
+documentation = "https://docs.rs/rama-boring-tokio"
 description = """
-An implementation of SSL streams for Tokio backed by BoringSSL
+An implementation of SSL streams for Tokio backed by BoringSSL in function of Rama
 """
 
 [package.metadata.docs.rs]
@@ -17,7 +21,7 @@ rustdoc-args = ["--cfg", "docsrs"]
 
 [features]
 # Use a FIPS-validated version of boringssl.
-fips = ["boring/fips", "boring-sys/fips"]
+fips = ["rama-boring/fips", "rama-boring-sys/fips"]
 
 # Use a FIPS build of BoringSSL, but don't set "fips-compat".
 #
@@ -27,23 +31,26 @@ fips = ["boring/fips", "boring-sys/fips"]
 #
 # TODO(cjpatton) Delete this feature and modify "fips" so that it doesn't imply
 # "fips-compat".
-fips-no-compat = ["boring/fips-no-compat"]
+fips-no-compat = ["rama-boring/fips-no-compat"]
 
 # Link with precompiled FIPS-validated `bcm.o` module.
-fips-link-precompiled = ["boring/fips-link-precompiled", "boring-sys/fips-link-precompiled"]
+fips-link-precompiled = [
+    "rama-boring/fips-link-precompiled",
+    "rama-boring-sys/fips-link-precompiled",
+]
 
 # Enables experimental post-quantum crypto (https://blog.cloudflare.com/post-quantum-for-all/)
-pq-experimental = ["boring/pq-experimental"]
+pq-experimental = ["rama-boring/pq-experimental"]
 
 # Enables Raw public key API (https://datatracker.ietf.org/doc/html/rfc7250)
-rpk = ["boring/rpk"]
+rpk = ["rama-boring/rpk"]
 
 [dependencies]
-boring = { workspace = true }
-boring-sys = { workspace = true }
+rama-boring = { workspace = true }
+rama-boring-sys = { workspace = true }
 tokio = { workspace = true }
 
 [dev-dependencies]
-futures = { workspace = true }
-tokio = { workspace = true, features = [ "full" ] }
 anyhow = { workspace = true }
+futures = { workspace = true }
+tokio = { workspace = true, features = ["full"] }
