cross-platform fixes

--- a/boring-sys/Cargo.toml
+++ b/boring-sys/Cargo.toml
@@ -23,18 +23,24 @@ include = [
     "/cmake/*.cmake",
     # boringssl (non-FIPS)
     "/deps/boringssl/util/32-bit-toolchain.cmake",
+    "/deps/boringssl/util/go_tests.txt",
     "/deps/boringssl/**/*.[chS]",
     "/deps/boringssl/**/*.asm",
     "/deps/boringssl/sources.json",
     "/deps/boringssl/crypto/obj/obj_mac.num",
     "/deps/boringssl/crypto/obj/objects.txt",
     "/deps/boringssl/**/*.bzl",
+    "/deps/boringssl/**/*.bazel",
+    "/deps/boringssl/**/*.bazel.lock",
+    "/deps/boringssl/**/*.bazelignore",
+    "/deps/boringssl/**/*.bazelrc",
+    "/deps/boringssl/**/*.bazelversion",
+    "/deps/boringssl/**/*.clang-format",
     "/deps/boringssl/**/*.cc",
     "/deps/boringssl/**/*.inc",
     "/deps/boringssl/**/CMakeLists.txt",
     "/deps/boringssl/**/sources.cmake",
-    "/deps/boringssl/**/*.cmake",
-    "/deps/boringssl/util",
+    "/deps/boringssl/build.json",
     "/deps/boringssl/LICENSE",
     "/build/*",
     "/src",
