--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -74,7 +74,7 @@ jobs:
           # - aarch64-ios
           # - aarch64-ios-sim
           # - x86_64-ios
-          - i686-linux
+          # - i686-linux
           - arm-linux
           - aarch64-linux
           - arm64-macos
@@ -135,11 +135,11 @@ jobs:
           #   check_only: true
           #   custom_env:
           #     IPHONEOS_DEPLOYMENT_TARGET: 17.5
-          - thing: i686-linux
-            target: i686-unknown-linux-gnu
-            rust: stable
-            os: ubuntu-latest
-            apt_packages: gcc-multilib g++-multilib
+          # - thing: i686-linux
+          #   target: i686-unknown-linux-gnu
+          #   rust: stable
+          #   os: ubuntu-latest
+          #   apt_packages: gcc-multilib g++-multilib
           - thing: arm-linux
             target: arm-unknown-linux-gnueabi
             rust: stable
