Fix patched docs.rs builds

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,7 +61,7 @@ jobs:
       - name: Check docs
         run: cargo doc --no-deps -p boring -p boring-sys --features rpk,pq-experimental,underscore-wildcards
         env:
-          - DOCS_RS: 1
+          DOCS_RS: 1
   test:
     name: Test
     runs-on: ${{ matrix.os }}
