start syncing w/ cloudflare/boring
commit: 47c33f64284a905bd1c26dc59c5eec6f5f38bf8b

https://github.com/cloudflare/boring/compare/9b34d3524bfeecb97449119ed130c7eb4be416d4..master

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ repository = "https://github.com/plabayo/rama-boring"
 # and perhaps let cloudflare do it if ever,
 # for now let's stick to 2021 with MSRV 1.82
 edition = "2021"
+rust-version = "1.82"
 
 [workspace.metadata.release]
 pre-release-commit-message = "Release {{version}}"
