--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -226,6 +226,11 @@ jobs:
         with:
           version: "11.0"
           directory: ${{ runner.temp }}/llvm
+      - name: MSVC dev cmd (${{ matrix.target }})
+        if: endsWith(matrix.target, '-pc-windows-msvc')
+        uses: ilammy/msvc-dev-cmd@v1
+        with:
+          arch: ${{ contains(matrix.target, 'x86_64') && 'x64' || 'x86' }}
       - name: Set LIBCLANG_PATH
         if: startsWith(matrix.os, 'windows')
         run: echo "LIBCLANG_PATH=$((gcm clang).source -replace "clang.exe")" >> $env:GITHUB_ENV
